added two for loops to dynamically add trivia questions and answers

--- a/index.html
+++ b/index.html
@@ -24,12 +24,18 @@
               </div>
         <!-- all questions will be dumped into this div -->
         <div id="questionID">
+          <div id="answerChoiceID">
 
+          </div>
         </div>
+
+       <script
+        src="https://code.jquery.com/jquery-3.3.1.js"
+        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+        crossorigin="anonymous"></script>
 
 <script src="assets/javascript/app.js"></script>
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvY   
 
 
 </body>
