trying to append user choices to HideShowResults div

--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
           </div>
         </div>
         <div id="HideShowResults"></div>
+          <h3 id="timer">Timer: </h3>
           <h3 id="correctAnswers">Correct Answers: </h1>
           <h3 id="incorrectAnswers">Incorrect Answers: </h1>
           <h3 id="unanswered">Unanswered: </h1>
+          
         </div>
 
        <script
